<resources>
    <string name="app_name">Trippin</string>

    <string name="hi_n_welcome_to_your_app">Trippin</string>

    <string name="your_app_tag_line">© Copyright 2023</string>

    <string name="forget_password">Forgot Password?</string>

    <string name="password">Password</string>

    <string name="username">Username</string>

    <string name="previous_pass">Your Previous Password</string>

    <string name="retype_password">Re-type New Password</string>

    <string name="newPassword">New Password</string>

    <string name="sign_in_to_continue">Please Login</string>

    <string name="hello_there_welcome_back">Hi, Welcome Back!</string>

    <string name="go">Login</string>

    <string name="new_user_sign_up">New User? SIGN UP</string>

    <string name="welcome">Welcome</string>

    <string name="signup_to_start_your_new_journey">SignUp for start the adventure</string>

    <string name="full_name">Full Name</string>

    <string name="email_id">Email</string>

    <string name="phone_number">Phone Number</string>

    <string name="already_have_an_account_login">Already Have Account? Login</string>

    <string name="sign_up">Register</string>

    <string name="btn_changePass">Change Password</string>
</resources>
